index.css
@import url('https://fonts.googleapis.com/css2?family=Asap:wght@700&family=Varela+Round&display=swap');

:root {
  --dark: #222;
  --light: #fff;
}

body {
  background-color: var(--dark);
  margin: 0px;
  padding: 0px;
  overflow: hidden;
}

main {
  overflow-y: scroll;
  height: 100vh;
}

#main, #projects {
  font-family: 'Asap', 'Varela Round', "Arial", monospace;
  overflow-y: scroll;
  color: var(--light);
  height: 100vh;
  width: 100vw;
  backdrop-filter: blur(20rem);
}

#main {
  display: flex;
  flex-direction: row;
  align-items: left;
  justify-content: left;
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
}

#projects > h1 {
  text-align: center;
  width: 100%;
}

#ball {
  background: white;
  background-size: 400% 400%;
  opacity: 0.25;
  height: 20rem;
  width: 20rem;
  border-radius: 50%;
  position: absolute;
  top: 2rem;
  left: 2rem;
  z-index: -1;
  transition: opacity 5s;
}
#ball.hidden {
  opacity: 0;
}

.container {
  margin: 1rem;
  padding: 1rem;
  background-color: #00000011;
  border-radius: 1rem;
  backdrop-filter: blur(10rem);
  transition: 0.5s;
}

.container.flash {
  background-color: var(--color);
  color: var(--dark);
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
}

.pfp {
  width: 100%;
  aspect-ratio: 1/1;
  border-radius: 50%;
}

a, a:visited {
  display: inline-block;
  background-color: var(--color);
  color: var(--light);
  text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
  text-decoration: none;
  padding: 0.5rem;
  margin: 0.5rem;
  border-radius: 0.5rem;
  width: calc(100% - 2rem);
  transition: 0.5s;
  text-align: center;
}

a:hover, .container.flash a {
  background-color: #000000;
  color: var(--color);
  text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
}

a.center {
  width: max-content;
  min-width: 5rem;
  margin: 0rem 0.25rem;
}

.min-content {
  width: min-content;
}

.scroll-button {
  position: absolute;
  height: 2rem;
  aspect-ratio: 1/1;
  color: white;
  background-color: #00000030;
  border: none;
  border-radius: 25%;
  transition: 0.5s;
  cursor: pointer;
}

.scroll-button.down {
  bottom: 2rem;
  right: 2rem;
}

.scroll-button.up {
  top: 2rem;
  right: 2rem;
}

.languages {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.languages > p {
  text-align: center;
  min-width: 5rem;
  margin: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  background-color: #00000020;
  backdrop-filter: blur(10rem);
  transition: 0.5s;
}

.languages > p.flash {
  background-color: var(--color);
  color: var(--dark);
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
}

